edit member page

--- a/src/assets/scss/layout/QRcodeLightBox.scss
+++ b/src/assets/scss/layout/QRcodeLightBox.scss
@@ -34,6 +34,37 @@
       color: $secColorblue;
     }
   }
+  .qrFrame {
+    position: relative;
+    width: 120px;
+    height: 35px;
+
+    .newsFramePic {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: 1;
+    }
+    .newsFrameText {
+      letter-spacing: 2px;
+      position: absolute;
+      top: -4px;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      padding-top: 0.6vw;
+      color: #fff;
+      z-index: 2;
+      font-size: $pcFontH4;
+      font-family: $font;
+      font-weight: 500;
+      line-height: 150%;
+      @media (width <= 768px) {
+        top: 0;
+      }
+    }
+  }
   .useNote {
     color: $mainTextColor;
     width: 80%;
