--- a/src/assets/scss/page/news.scss
+++ b/src/assets/scss/page/news.scss
@@ -1,10 +1,44 @@
 
 .news_banner, .newsDetail_banner{
+    position: relative;
+    overflow: hidden;
+    z-index: 3;
+    height: 23.6vw;
     img{
         width: 100%;
         vertical-align: middle;
     }   
+    h2{
+        position: absolute;
+        bottom: 40%;
+        left: 14%;
+        color: $bgColorLightgray;
+        letter-spacing: 15px
+    }
 }
+.news_banner{
+    @media screen and (max-width: 768px) {
+    height: 60vw;
+    img{
+        width: 180%;
+        vertical-align: middle;
+        position: absolute;
+        right: -100px;
+    }  
+}
+}
+.newsDetail_banner{
+    @media screen and (max-width: 768px) {
+    height: 60vw;
+    img{
+        width: 180%;
+        vertical-align: middle;
+        position: absolute;
+        right: -220px;
+    }  
+}
+}
+
 .news_section, .news_detail_section{
     background-color: $bgColorLightgray;
     position: relative;
@@ -176,9 +210,7 @@ ul.news_pc_filter li{
             padding:  1.4vw;
             text-align: center;
             transform: translate(-50%, -50%);
-            &hover+ .news_page_num{
-                background-color: aqua;
-            }
+
             @media screen and (max-width: 768px) {
                 top: 42%;
                 left: 48%;
