add reset cursor

--- a/src/assets/scss/page/ticket.scss
+++ b/src/assets/scss/page/ticket.scss
@@ -262,6 +262,7 @@
     >.tickOption.PC{ gap: 4vw; }
     hgroup{
         button{
+            cursor: pointer;
             border: 0;
             background-color: transparent;
         }
