1.alter calendar title font 2.add @click on TickFinished for test 3.add timer & startFromTop 4.commit for asking 4.

--- a/src/assets/scss/page/ticket.scss
+++ b/src/assets/scss/page/ticket.scss
@@ -210,6 +210,7 @@
     }
     // 當前月份
     .ivu-calendar-header-title{
+        font-family: $font;
         font-size: $pcFontH3;
         padding-top: 9px;
         height: 44px;
